# torch-sensitivity

./: README.md  build_rate_kl_models.py  compare_qoi_dists.py  compress_time_sols.py  diagnostics_torch1d_runs.py  fix_uq_out.py  gen_tps_conforming_t1d_mesh.py  gen_tps_curved_corner_mesh.py  manage_bigcomp_runs.py  mc_tools.py  mf_covariance.py  pca_tools.py  pyproject.toml  rate_data_to_torch1d_input.py  rate_data_to_tps2d_input.py  rate_sensitivity.py  reaction_sens_plots.py  reaction_sensitivity.py  resample_rates.py  run_torch1d.sh  run_torch_samples.py  sample_utils.py  setup.py  sf_torch1d_uq_post.py  sf_tps2d_uq_post.py  sobol_tools.py  spoof_torch1dbig.py  torch1d_argon_sample_config_template.yml  torch_config.py  torch_mesh_tools.py
dane_scripts/: run_resample.sh  run_sf_r1_G3_mid.sh  run_sf_r1_G4_fine.sh  run_sf_r1_pilot_4s.sh  run_sf_r1_pilot_fine.sh  run_sf_r1_pilot_fine_core.sh  run_sf_r1_pilot_mid_core.sh  run_sf_re_sens_uq_post.sh  run_sf_re_uq_post.sh  run_sftps_r1_pilot.sh  run_t1d_G1_coarse.sh  run_t1d_G3_fine.sh  run_t1d_G3_mid.sh  run_t1d_G4_mid.sh  run_t1d_pilot_4s.sh  run_t1d_pilot_V2.sh  run_t1d_pilot_coarse.sh  run_t1d_pilot_fine.sh  run_t1d_pilot_mid.sh  run_torch1d_re_coarse.sh  run_tps2d_LF2_stage.sh  run_tps2d_LF_mean.sh  run_tps2d_LF_mean_DB.sh  run_tps2d_r1.sh  run_tps2d_stage.sh
main_tuq/: argon_lomach_1atm.h5  axi_average_turbBC.py  build_rate_kl_models.py  compare_qoi_dists.py  generate_cold_restart.py  generate_hot_restart.py  generate_reactturb_restart.py  generate_temp_restart.py  generate_turb_restart.py  manage_bigcomp_runs.py  (+11 more)
(+242 files in other folders)
