[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-sensitivity"
version = "0.0.1"
requires-python = ">3.6"
authors = [
    {name = "Garo Bedonian", email = "garo.bedonian@gmail.com"},
]
description = "Pipeline scripts for performing torch UQ"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
